[package]
name = "rdb_migrate"
version = "0.1.0"
authors = ["yubo <yubo@cryptape.com>"]

[dependencies]
clap = "2.32.0"
log = "0.4.3"
#bincode = "0.8.0"
#cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
#common-types = { path = "./types" }
#db = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
kvdb-rocksdb = "0.1.4"
#rlp = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
#libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
#rand = "0.6.5"
